--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
