--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
+    "bcryptjs": "^3.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
     "next": "16.1.0",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
